package com.fullness.ec.entity;

import lombok.Data;

@Data
public class Department {
    private Integer deptId;
    private String deptName;
}
