package com.fullness.ec.entity;

import lombok.Data;

@Data
public class PaymentMethod {
    private Integer payMethodId; 
    private String payMethodName; 
}
