@startuml
title 全体クラス図
hide empty members
left to right direction

package entity{
    class Customer{
    }

    class Order{
    }

    class OrderDetail{
    }

    class OrderStatus{
    }
    
    class PaymentMethod{
    }

    class Product{
    }

    class ProductCategory{
    }

    class ProductStock{
    }

    class Employee{
    }

    class Department{
    }

    class EmployeeAccount{
    }
}

Customer <--> Order
Order --> OrderStatus
Order --> OrderDetail
Order --> PaymentMethod
Product --> ProductStock
Product --> ProductCategory
Employee --> EmployeeAccount
Employee --> Department

package form{
    
    class CustomerForm{
    }

    class OrderForm{
    }

    class ProductForm{
    }

    class EmployeeForm{
    }
    
    class EmployeeAccountForm{
    }
    
    class CustomerFormValidator{
    }
    
    class OrderFormValidator{
    }
    
    class PruductFormValidator{
    }
    
    class EmployeeFormValidator{
    }
}

package helper{
    class CustomerConverter{
    }

    class OrderConverter{
    }

    class ProductConverter{
    }

    class EmployeeConverter{
    }
    
    class ImageUploadHelper{
    }
}
CustomerConverter --> Customer
CustomerConverter --> CustomerForm
OrderConverter --> Order
OrderConverter --> OrderForm
ProductConverter --> Product
ProductConverter --> ProductForm
EmployeeConverter --> EmployeeAccount
EmployeeConverter --> EmployeeAccountForm

package repository{
    class CustomerRepository{
    }

    class OrderRepository{
    }

    class ProductRepository{
    }

    class EmployeeRepository{
    }

    class ProductCategoryRepository{
    }

    class OrderDetailRepository{
    }
    
    class StockRepository{
    }
}

package service{
    class CustomerService{
    }
    
    class OrderService{
    }
    
    class ProductService{
    }

    class EmployeeService{
    }
    
    class ProductCategoryService{
    }
}

CustomerService --> CustomerConverter
OrderService --> OrderConverter
ProductService --> ProductConverter
ProductService --> ImageUploadHelper
EmployeeService --> EmployeeConverter

CustomerService --> CustomerRepository
OrderService --> OrderRepository
OrderService --> OrderDetailRepository
ProductService --> ProductRepository
EmployeeService --> EmployeeRepository
ProductCategoryService --> ProductCategoryRepository

CustomerRepository --> Customer
OrderRepository --> Order
OrderDetailRepository --> OrderDetail
ProductRepository --> Product
EmployeeRepository --> Employee
ProductCategoryRepository --> ProductCategory


package controller{
    class AddAccountContoroller{
    }
    class RegisterProductContoroller{
    }
    class SearchProductContoroller{
    }
    class UpdateProductContoroller{
    }
    class DeleteProductContoroller{
    }
    class RegisterProductCategoryContoroller{
    }
    class AccountLoginContoroller{
    }
}
AddAccountContoroller --> EmployeeService
RegisterProductContoroller --> ProductService
SearchProductContoroller --> ProductService
UpdateProductContoroller --> ProductService
DeleteProductContoroller --> ProductService
RegisterProductCategoryContoroller --> ProductService
AccountLoginContoroller --> EmployeeService

package aop{
   class LoggingAroundAdvice {
   }
}

package config{
    class Config{
    }
    class WebMvcConfig implements WebMvcConfigurer {
    }
}

package security{

		class securityConfig{
			+ webSecurityCustomizer():WebSecurityCustomizer
			+ securityFilterChain(HttpSecurity http):SecurityFilterChain
		}
		class AccountUserDetailsService{
			loadUserByUsername(String):UserDetails
			getAuthorities(String):Collection<GrantedAuthority>
		}
		class AccountUserDetails{
			+getAuthorities():Collection<? extends GrantedAuthority>
			+getPassword():String
			+getUsername():String
			+isAccountNonExpired():boolean
			+isAccountNonLocked():boolean
			+isCredentialsNonExpired():boolean
			+isEnabled():boolean
		}
	
}
@enduml




